added some tasties

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 	<div class="wrapper">
 		<img class="banner" src="bg.png" />
 		<div class="paper" contenteditable="true">
-Etup, Burbs, Bob, Twillz, brightzs, ThePepoScythe, Ludw1G, Bitcoin, Showusyoureyesf1st, bruno_b0ss, WHEREWEREYOUGUYS, Kasoysama, mattmk, naveslaiks1, buksi_g, seraphic_glow, bigmomma69, BadeRI, Baidinran, da_doctah, pezzy_, gillunz, xhyunkelx, Cataplasmic, Powke_why, martenv11, popske1, elanif, piggip, sebbau, liamwpk, nomoresadness, sokjuice, stillballin24, Drovan, byrr, Tsaeko, edgarick, mopit, feedallday, bigsmcgee, pipz, s0la, NinjahPigeon, Olari_, ObserverWardXXL, IRKTHUL, Corolol, Hofled, 0781948154915499819189191, Maxplosion_, Desaan, turbofresh, Apps__, FOODREVIEW, rusian0422, 3FE_, Oophillipoo, JigsawRage, jaunty22, ProJakeyy, Stillballin24</div>
+Etup, Burbs, Bob, Twillz, brightzs, ThePepoScythe, Ludw1G, Bitcoin, Showusyoureyesf1st, bruno_b0ss, WHEREWEREYOUGUYS, Kasoysama, mattmk, naveslaiks1, buksi_g, seraphic_glow, bigmomma69, BadeRI, Baidinran, da_doctah, pezzy_, gillunz, xhyunkelx, Cataplasmic, Powke_why, martenv11, popske1, elanif, piggip, sebbau, liamwpk, nomoresadness, sokjuice, stillballin24, Drovan, byrr, Tsaeko, edgarick, mopit, feedallday, bigsmcgee, pipz, s0la, NinjahPigeon, Olari_, ObserverWardXXL, IRKTHUL, Corolol, Hofled, 0781948154915499819189191, Maxplosion_, Desaan, turbofresh, Apps__, FOODREVIEW, rusian0422, 3FE_, Oophillipoo, JigsawRage, jaunty22, ProJakeyy, Stillballin24, matty_p, uguuuguuuguu, m4trrix</div>
 	</div>
 </body>
 
