--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
 	<div class="wrapper">
 		<img class="banner" src="bg.png" />
 		<div class="paper" contenteditable="true">
-Etup, Burbs, Bob, hotshotgg, Twillz, odang, cybrix, brightzs, ThePepoScythe, Ludw1G, Showusyoureyesf1st, bruno_b0ss, WHEREWEREYOUGUYS, Kasoysama, mattmk, naveslaiks1, buksi_g, seraphic_glow, bigmomma69, BadeRI, Baidinran, da_doctah, pezzy_, gillunz, takesaki, Cataplasmic, Powke_why, martenv11, popske1, elanif, piggip, sebbau, liamwpk, NoMoreSadness, sokjuice, Drovan, Byrr, Tsaeko, edgarick, mopit, feedallday, bigsmcgee, pipz, s0la, NinjahPigeon, Olari_, ObserverWardXXL, IRKTHUL, Corolol, Hofled, 0781948154915499819189191, Maxplosion_, Desaan, turbofresh, Apps__, FOODREVIEW, rusian0422, 3FE_, Oophillipoo, JigsawRage, jaunty22, ProJakeyy, Stillballin24, matty_p, uguuuguuuguu, m4ttrix, y0rge, Odobisean, SpiralCycle, SamMoonRyong, whowaswho, OpieOupe, Hoopyy, FITEGARR, Scunch, 
-Kardz301, kusoge, ziplague, sentrygunarmada, Hyunkel, amateurt3rran, zXzLenin</div>
+Etup, Burbs, Bob, hotshotgg, Twillz, odang, cybrix, brightzs, ThePepoScythe, Ludw1G, Showusyoureyesf1st, bruno_b0ss, WHEREWEREYOUGUYS, Kasoysama, mattmk, naveslaiks1, buksi_g, seraphic_glow, bigmomma69, BadeRI, Baidinran, da_doctah, pezzy_, Gillunz, takesaki, Cataplasmic, Powke_why, martenv11, popske1, elanif, piggip, sebbau, liamwpk, NoMoreSadness, sokjuice, Drovan, Byrr, Tsaeko, edgarick, mopit, feedallday, bigsmcgee, pipz, s0la, NinjahPigeon, Olari_, ObserverWardXXL, IRKTHUL, Corolol, Hofled, 0781948154915499819189191, Maxplosion_, Desaan, turbofresh, Apps__, FOODREVIEW, rusian0422, 3FE_, Oophillipoo, JigsawRage, jaunty22, ProJakeyy, Stillballin24, matty_p, uguuuguuuguu, m4ttrix, y0rge, Odobisean, SpiralCycle, SamMoonRyong, whowaswho, OpieOupe, Hoopyy, FITEGARR, Scunch, 
+Kardz301, Kusoge, ziplague, SentrygunArmada, Hyunkel, AmateurTerran, zXzLenin</div>
 	</div>
 </body>
 
